# deepin-unioncode

./: CMakeLists.txt
assets/: CMakeLists.txt
assets/configures/: CMakeLists.txt
debian/: changelog  control  deepin-unioncode.install
src/common/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/plugins/aimanager/: CMakeLists.txt
src/plugins/binarytools/: CMakeLists.txt
src/plugins/builder/: CMakeLists.txt
src/plugins/chat/: CMakeLists.txt
src/plugins/codeeditor/: CMakeLists.txt
src/plugins/codeporting/: CMakeLists.txt
src/plugins/collaborators/: CMakeLists.txt
src/plugins/commandproxy/: CMakeLists.txt
src/plugins/console/: CMakeLists.txt
src/plugins/container/: CMakeLists.txt
src/plugins/core/gui/: loadingwidget.cpp  loadingwidget.h
src/plugins/cxx/: CMakeLists.txt
src/plugins/debugger/: CMakeLists.txt
src/plugins/filebrowser/: CMakeLists.txt
src/plugins/find/: CMakeLists.txt
src/plugins/git/: CMakeLists.txt
src/plugins/java/: CMakeLists.txt
src/plugins/javascript/: CMakeLists.txt
src/plugins/linglong/: CMakeLists.txt
src/plugins/option/optioncore/: CMakeLists.txt
src/plugins/performance/: CMakeLists.txt
src/plugins/project/: CMakeLists.txt
src/plugins/python/: CMakeLists.txt
src/plugins/recent/: CMakeLists.txt
src/plugins/reversedebug/: CMakeLists.txt
src/plugins/smartut/: CMakeLists.txt
src/plugins/symbol/: CMakeLists.txt
src/plugins/template/: CMakeLists.txt
src/plugins/valgrind/: CMakeLists.txt
src/tools/debugadapter/: CMakeLists.txt
src/tools/eventrecorder/: CMakeLists.txt
src/tools/languageadapter/: CMakeLists.txt
src/tools/performancedapter/: CMakeLists.txt
